# STPrivy

./: .gitignore  README.md  UPGRADE_SUMMARY.md  package-lock.json  package.json  test-sign-tx.js
.kiro/specs/zkkyc/: tasks.md
apps/server/: .env.example  e2e-test.mjs  jest.config.ts  package-lock.json  package.json
apps/server/prisma/: schema.prisma
apps/server/src/: app.module.spec.ts  app.module.ts  main.ts
apps/server/src/config/: configuration.ts  env.validation.ts
apps/server/src/events/: domain-events.ts
apps/server/src/modules/admin/: admin.controller.ts  (+1 more)
apps/web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/hooks/: use-auth.ts  use-credentials.ts
apps/web/src/lib/: api.ts
apps/web/src/types/: index.ts
circuits/: README.md
contracts/: .gitignore  deploy-contract.js  deploy.sh
contracts/soroban/kyc_registry/: .gitignore  Cargo.toml  README.md
contracts/soroban/kyc_registry/src/: auth.rs  contract.rs  errors.rs  events.rs  groth16.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/tools/: proof_to_hex.js  public_to_hex.js  vk_to_hex.js
docker/: docker-compose.yml
docs/: design.md  requirements.md
(+119 files in other folders)
