[package]
name = "kyc-registry"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.0" }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
strip = true
